Bug 1738560 - When text-transform is in effect, ensure we finish building the transformed textrun even if we would otherwise skip the line-break scan (in SVG text). r=emilio a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D130055